src/app-groups/elk/apps/logstash/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - "logstash.smartscrumpoker.balazskrizsan.com"
      secretName: env-ert
  rules:
    - host: "logstash.smartscrumpoker.balazskrizsan.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logstash
                port:
                  number: 9600
